--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.shmack">
+          package="com.tullahnazari.shmack">
     
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,13 +10,13 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            android:name=".Controller.App">
-        <activity android:name=".Controller.CreateUserActivity">
+            android:name="com.tullahnazari.shmack.Controller.App">
+        <activity android:name="com.tullahnazari.shmack.Controller.CreateUserActivity">
         </activity>
-        <activity android:name=".Controller.LoginActivity">
+        <activity android:name="com.tullahnazari.shmack.Controller.LoginActivity">
         </activity>
         <activity
-                android:name=".Controller.MainActivity"
+                android:name="com.tullahnazari.shmack.Controller.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
